force-app/main/default/objects/Solution_Estimate__c/Solution_Estimate__c.object-meta.xml
<CustomObject>
    <description>Estimates for configuration, data migration, or development work.</description>
    <label>Solution Estimate</label>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>Estimate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>