force-app/main/default/objects/Solution_Estimate__c/fields/Best_Case_LOE_Hours__c.field-meta.xml
<CustomField>
    <fullName>Best_Case_LOE_Hours__c</fullName>
    <label>Best Case LOE (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>