force-app/main/default/objects/Solution_Estimate__c/fields/Budgeted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Hours__c</fullName>
    <formula>Burn_Report__r.Budgeted_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Burn Report</inlineHelpText>
    <label>Budgeted Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>