force-app/main/default/objects/Solution_Estimate__c/fields/Burn_Report__c.field-meta.xml
<CustomField>
    <fullName>Burn_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Burn Report Record</label>
    <referenceTo>Burn_Report__c</referenceTo>
    <relationshipLabel>Solution Esimtates</relationshipLabel>
    <relationshipName>Solution_Esimtates</relationshipName>
    <type>Lookup</type>
</CustomField>