force-app/main/default/objects/Solution_Estimate__c/fields/Dev_Effort_Best_Case_LOE_Hours__c.field-meta.xml
<CustomField>
    <fullName>Dev_Effort_Best_Case_LOE_Hours__c</fullName>
    <label>Dev Effort Best Case LOE (Hours)</label>
    <summarizedField>Developer_Efforts__c.Best_Case_LOE__c</summarizedField>
    <summaryForeignKey>Developer_Efforts__c.Solution_Estimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>