force-app/main/default/objects/Solution_Estimate__c/fields/In_Scope__c.field-meta.xml
<CustomField>
    <fullName>In_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Scope?</label>
    <type>Checkbox</type>
</CustomField>