force-app/main/default/objects/Solution_Estimate__c/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Iteration</label>
    <referenceTo>Iteration__c</referenceTo>
    <relationshipName>Solution_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>