force-app/main/default/objects/Solution_Estimate__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
                <default>true</default>
                <label>1.0</label>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>