force-app/main/default/objects/Solution_Estimate__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <formula>Burn_Report__r.Service_Code__c</formula>
    <label>Service Code</label>
    <type>Text</type>
</CustomField>