force-app/main/default/objects/Solution_Estimate__c/fields/Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Solution_Name__c</fullName>
    <label>Solution Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>