force-app/main/default/objects/Solution_Estimate__c/fields/Total_Effort_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort_Hours__c</fullName>
    <label>Total Effort Hours</label>
    <summarizedField>Developer_Efforts__c.Hours__c</summarizedField>
    <summaryForeignKey>Developer_Efforts__c.Solution_Estimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>