force-app/main/default/objects/Solution_Estimate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Coding</fullName>
            </value>
            <value>
                <fullName>App Exchange Product</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Sites</fullName>
            </value>
            <value>
                <fullName>System Integration</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>