force-app/main/default/objects/Solution_Estimate__c/fields/Worst_Case_LOE_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worst_Case_LOE_Hours__c</fullName>
    <label>Worst Case LOE (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>